compiler/tools/fpp-check/test/event/missing_ports.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/event/missing_ports.fpp: 1.1
passive component C {
^
error: component with event specifiers must have event port
